--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "weather-bot",
   "version": "1.0.0",
+  "description": "Auto weather trading bot",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "ethers": "^6.10.0",
+    "@polymarket/clob-client": "^0.0.9"
   }
 }
